bs-poupador/teste-email-env/prd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prd-teste-email-env
  namespace: prd-bs-poupador
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: prd-teste-email-env
  type: NodePort
