bs-poupador/teste-email-env/prd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teste-email-env
  namespace: prd-bs-poupador
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/success-codes: 200,301,302
    alb.ingress.kubernetes.io/tags: Environment=prd-teste-email-env,Team=${ORG},App=teste-email-env

spec:
  rules:
  - host: prd-teste-email-env
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prd-teste-email-env
            port:
              number: 80
